Fix : Grid gap to 5px

--- a/HotWax_2021/Code Files/Hotwax_Stylesheet_2021.css
+++ b/HotWax_2021/Code Files/Hotwax_Stylesheet_2021.css
@@ -650,7 +650,9 @@ span.date-wrap span {
   padding-left: 20px;
   border-left: 1px solid transparent;
 }
-
+.footer-container .row-number-6 .row-fluid {
+   grid-gap:5px;
+ }
 .footer-container h3 {
   border-bottom: 1px solid rgba(51,51,51,0.15);
   font-family: Montserrat,sans-serif;
